@@ -2,6 +2,7 @@ Revision history for Geo::Coder::Abbreviations
 
 0.03
 	Use HTTP::Cache::Transparent if that has been installed
+	Handle more abbreviations and when given an abbreviated argument
 
 0.02	Thu Oct  1 14:16:59 EDT 2020
 	Use less memory
